--- a/casa.html
+++ b/casa.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'UA-99747601-1');
 </script>
-    
+    <link rel="apple-touch-icon" href="icon-webcam.png" />
   </head>
   <body style="background-color:#000;color:#fff;font-family:Arial, Helvetica, sans-serif;">
     
