--- a/betsie/privacy_policy.html
+++ b/betsie/privacy_policy.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Betsie - Privacy Policy</title>
+    <!-- Import Montserrat Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1, h2, h3 {
+            font-weight: 700;
+            color: #333; 
+        }
+        ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+        a {
+            color: #F36D6F; 
+            text-decoration: none;
+            padding: 5px 10px;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
+    <!-- Added: Simple navigation back to the homepage -->
+    <p><a href="index.html" style="font-weight: 700;">&lt;&lt; Back to Home</a></p>
 
     <div>
         <div>
